# ugt-fwtools

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-package.yml
src/ugt_fwtools/: build_report.py  checksynth.py  compile_simlib.py  fwpacker.py  simulation.py  synthesis.py
ugt_fwtools/: build_report.py  checksynth.py  compile_simlib.py  fwpacker.py  pkgpatch.py  resynthesize_one_module.py  simulation.py  synth_1_module.py  synthesis.py  synthesize_only_one_module.py  utils.py
